# alive

./: .gitignore  @Arma2NET.7z  BIF_RELEASEPOST_0_6_2_1404101.txt  BIF_RELEASEPOST_0_6_8_1406181.txt  BIF_RELEASEPOST_0_7_1408161.txt  Just a test_CAN_B_DELETED.txt.txt  NOTICE.txt  QC_CHECKLIST.txt  README.txt  TODO.txt  alive_object_blacklist.txt  index.html  map_p_drive.cmd  mod.cpp  params.json
@AliveServer/: NLog.config  authors.txt
MANW/: alive.cfg
addons/: .project  mod.cpp
addons/amb_civ_command/: CfgFunctions.hpp  CfgPatches.hpp  fnc_cc_campfire.sqf  fnc_cc_driveTo.sqf  fnc_cc_getWeapons.sqf  fnc_cc_housework.sqf  fnc_cc_idle.sqf  fnc_cc_joinGathering.sqf  fnc_cc_joinMeeting.sqf  fnc_cc_journey.sqf  fnc_cc_observe.sqf  fnc_cc_randomMovement.sqf  fnc_cc_rogue.sqf  fnc_cc_rogueTarget.sqf  fnc_cc_sabotage.sqf  fnc_cc_sleep.sqf  fnc_cc_startGathering.sqf  fnc_cc_startMeeting.sqf  fnc_cc_suicide.sqf  fnc_cc_suicideTarget.sqf  fnc_civCommandRouter.sqf  fnc_selectCivilianCommand.sqf  script_component.hpp
addons/amb_civ_placement/: CfgPatches.hpp  CfgVehicles.hpp  fnc_AMBCP.sqf  fnc_AMBCPInit.sqf  stringtable.xml
addons/amb_civ_population/: CfgFunctions.hpp  CfgPatches.hpp  CfgSounds.hpp  CfgVehicles.hpp  clusterActivator.fsm  clusterActivator_v2.fsm  config.cpp  fnc_addAmbientRoomLight.sqf  fnc_addCivilianActions.sqf  fnc_agentHandler.sqf  fnc_agentKilledEventHandler.sqf  fnc_agentSelectSpeedMode.sqf  fnc_civilianAgent.sqf  fnc_civilianPopulationMenuDef.sqf  fnc_civilianPopulationSystem.sqf  fnc_civilianPopulationSystemInit.sqf  fnc_civilianVehicle.sqf  fnc_clientAddAmbientRoomLight.sqf  fnc_clientSwitchMove.sqf  fnc_clusterHandler.sqf  fnc_createCivilianVehicle.sqf  fnc_getAgentEnemyNear.sqf  fnc_getGlobalPosture.sqf  fnc_selectRoleAction.sqf  fnc_switchMove.sqf  stringtable.xml
addons/c_tablet/: CfgPatches.hpp  CfgWeapons.hpp  config.cpp
addons/cba/: $PBOPREFIX$  CfgFunctions.hpp  CfgPatches.hpp  config.cpp  script_component.hpp  script_macros.hpp
addons/civ_placement/: CfgFunctions.hpp  CfgPatches.hpp  CfgVehicles.hpp  civPlacementInit.fsm  civTest.fsm  fnc_CP.sqf  fnc_CPInit.sqf  fnc_auto_civClusterGeneration.sqf  fnc_civClusterGeneration.sqf  fnc_createRoadblock.sqf  stringtable.xml
addons/civ_strategic/: CfgFunctions.hpp  CfgPatches.hpp  CfgVehicles.hpp  PboPrefix.txt  README.txt  fnc_CO.sqf  fnc_COInit.sqf  icon_civ_CO.paa  script_component.hpp  stringtable.xml
addons/composition_a3/: CfgFunctions.hpp  CfgGroups.hpp  config.cpp  fnc_exportComposition.sqf  fnc_findComposition.sqf  fnc_spawnComposition.sqf  stringtable.xml
addons/fnc_analysis/: CfgFunctions.hpp  CfgPatches.hpp  PboPrefix.txt  config.cpp  fnc_battlefieldAnalysis.sqf  fnc_getClosestInActive.sqf  fnc_getClosestLand.sqf  fnc_getClosestRoad.sqf  fnc_getClosestSea.sqf  fnc_getMapBounds.sqf  fnc_getNearUnits.sqf  fnc_getPositionDistancePlayers.sqf  fnc_gridAnalysisActive.sqf  fnc_gridAnalysisProfileEntity.sqf  fnc_gridAnalysisProfileVehicle.sqf  fnc_gridAnalysisProfiles.sqf  fnc_gridImportStaticMapAnalysis.sqf  fnc_gridMapAnalysis.sqf  fnc_liveAnalysis.sqf  fnc_militaryIntel.sqf  fnc_plotSectors.sqf  fnc_sector.sqf  fnc_sectorAnalysisBestPlaces.sqf  fnc_sectorAnalysisClustersCiv.sqf  fnc_sectorAnalysisClustersMil.sqf  fnc_sectorAnalysisElevation.sqf  fnc_sectorAnalysisFlatEmpty.sqf  fnc_sectorAnalysisProfiles.sqf  fnc_sectorAnalysisRoads.sqf  fnc_sectorAnalysisTerrain.sqf  fnc_sectorAnalysisUnits.sqf  fnc_sectorDataMerge.sqf  fnc_sectorDataSort.sqf  fnc_sectorFilterActive.sqf  fnc_sectorFilterBestPlaces.sqf  fnc_sectorFilterClusters.sqf  fnc_sectorFilterElevation.sqf  fnc_sectorFilterFlatEmpty.sqf  (+14 more)
extensions/ALiVEPlugIn/: CMakeLists.txt  README.md
extensions/ALiVEPlugIn/include/: alive.h  aliveplugin.h  aliveplugin.rc  aliveplugin.rc.in  logger.h  perfmon.h  version.h  version.h.in
extensions/ALiVEPlugIn/spdlog/include/spdlog/details/: os.h
extensions/ALiVEPlugIn/src/: CMakeLists.txt  alive.cpp  alive_test.cpp  aliveplugin.cpp  aliveplugin_test.cpp  alltests.cpp  logger.cpp  perfmon.cpp  perfmon_test.cpp
extensions/ALiVEPlugIn/src/commands/: CMakeLists.txt  cmdDateTime.cpp  cmdGetBulkJSON.cpp  cmdSendBulkJSON.cpp  cmdSendJSON.cpp  cmdSendJSONAsync.cpp  cmdServerAddress.cpp  cmdServerName.cpp  cmdStartALiVE.cpp
images/: ALIVE_toughbook.paa  CAS.paa  CASEVAC.paa
plugins/: Webservices.txt  alive.cfg
releasenotes/: ALIVE.OS_RELEASEPOST_1_0_0 - .txt  BIF_RELEASEPOST_0_9.txt  BIF_RELEASEPOST_0_9_10.txt  BIF_RELEASEPOST_0_9_4.txt  BIF_RELEASEPOST_0_9_5.txt  BIF_RELEASEPOST_0_9_6.txt  BIF_RELEASEPOST_0_9_7.txt  BIF_RELEASEPOST_0_9_7_1504161.txt  BIF_RELEASEPOST_0_9_8.txt  BIF_RELEASEPOST_0_9_9.txt  BIF_RELEASEPOST_1_0_0.txt  BIF_RELEASEPOST_1_0_1.txt  BIF_RELEASEPOST_1_0_2.txt  BIF_RELEASEPOST_1_0_3.txt  BIF_RELEASEPOST_1_0_4.txt  BIF_RELEASEPOST_1_1_0.txt
store/: function_library.tar
utils/: QC_CHECKLIST.txt  make_docs.sh
website/: composer.json
(+2318 files in other folders)
